[package]
name  "is-web-wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "is-web-wasm"
crate-type = [""]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
wasm-bindgen-futures = { version = "0.4.28", optional = true }
parking_lot = { version = "0.11.2", features = ["wasm-bindgen"] }
# rand = { version = "0.8.4", features = ["wasm-bindgen"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"] }
getrandom = { version = "0.2.3", features = ["wasm-bindgen", "js"] }

[dependencies.wasm_bindgen]
version = "0.2.78"
optional = true

[dependencies.js-sys]
version = "0.3.55"
optional = true

[test-dependencies]
criterion = "0.3.5"

[profile.release]
lto = "fat"         # turn on Link-Time Optimizations
codegen-units = 1   # trade compile time with maximum optimization
opt-level = "z"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
